Added a template to render the menu page

--- a/wp-content/themes/tnn/style.css
+++ b/wp-content/themes/tnn/style.css
@@ -214,6 +214,9 @@ width:100%;
 	padding:0;
 	width:96.5%;
 	}
+.content-textured-inner-about > img{
+	width:100%;
+}
 .tabs-content > .content {
 	padding: 0px;
 }
