Created a template to render the events page

--- a/wp-content/themes/tnn/style.css
+++ b/wp-content/themes/tnn/style.css
@@ -210,16 +210,16 @@ width:100%;
 	max-width: 100%;
 	float: left;
 }
+.whole{
+width:100%;
+}
 .content-textured-inner-about{
 	padding:0;
 	width:96.5%;
 	}
-<<<<<<< HEAD
 .content-textured-inner-about > img{
 	width:100%;
 }
-=======
->>>>>>> 454ee6992f6040f10818f365f438668a5625eaa9
 .tabs-content > .content {
 	padding: 0px;
 }
