--- a/wp-content/themes/tnn/style.css
+++ b/wp-content/themes/tnn/style.css
@@ -727,20 +727,21 @@ width:33%;
 .em-calendar li{
 	list-style:none;
 	-webkit-border-radius: 3px;
--moz-border-radius: 3px;
-border-radius: 3px;
-background:#a1856d;
-padding:5px 10px;
-margin:4px;
-display:block;
-text-align:left;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    background:#a1856d;
+    padding:5px 10px;
+    margin:4px;
+    display:block;
+    text-align:left;
+    font-size: 12px;
 }
 table.em-calendar td.eventful a{
 	color:#fff;
 }
 table.fullcalendar td {
     text-align: right;
-    width: 50px;
+    width: 70px;
     height: 100px;
     border: 1px solid #ababab;
     vertical-align: top;
