--- a/wp-content/plugins/alpine-photo-tile-for-instagram/css/AlpinePhotoTiles_style.css
+++ b/wp-content/plugins/alpine-photo-tile-for-instagram/css/AlpinePhotoTiles_style.css
@@ -127,6 +127,7 @@ img.AlpinePhotoTiles-img-nocorners{
 }
 
 .AlpinePhotoTiles-image-div{
+	position:relative;
   display:block;
   background-size:cover;
   background-repeat:no-repeat;
@@ -138,6 +139,8 @@ img.AlpinePhotoTiles-img-nocorners{
   width:100%;
   height:100%;
   display:block;
+  position:relative;
+	overflow:hidden;
 }
 .AlpinePhotoTiles-border-div{
   background: none repeat scroll 0 0 #FFFFFF;
